feat: refactoring and fix team deletion
